syntax 	= "proto3";

option java_multiple_files = true;
option java_package = "io.runningControl.CA.watchFit";
option java_outer_classname = "RunningControlgRPCProto";

service RunningControl {

	// unary rpc
	rpc BurnedCalories (BurnedCaloriesRequest) returns (BurnedCaloriesResponse) {}

	// client streaming rpc
	rpc ExerciseTime (stream ExerciseTimeRequest) returns (ExerciseTimeResponse) {}
}

message BurnedCaloriesRequest {
	int32 age = 1;
	int32 weight = 2;
	int32 height = 4;
	string gender = 3;
	double duration = 5;
	int32 activity = 6;
}

message BurnedCaloriesResponse {
	double burnedCalories = 1;
}

message ExerciseTimeRequest {
	bool exerciseTimeSignal = 1;
}

message ExerciseTimeResponse {
	string exerciseTimeResponse = 1;
}